[package]
name = "unseenmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
mailparse = "0.14.0"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
ntfy = "0.3.2"
tokio = { version = "1.28.0", features = ["full"] }
async-imap = { version = "0.8.0", default-features = false, features = ["runtime-tokio"] }
clap = { version = "4.2.5", features = ["derive"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
futures = "0.3.28"
